--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,20 @@
   margin: 0;
   background-color: #aaa;
 }
+.snake-body-part,
+.snake-head,
+.snake-tail{
+    width: 35px;
+    height: 35px;
+    position: absolute;
+    background-color:red;
+    display: inline-block;
+    margin: 1px;
+}
 .game-flow {
-  width: 100%;
-  height: 490px;
+  margin: 0 auto;
+  width: 800px;
+  height: 500px;
 }
 hr {
   background-color: #eee;
@@ -17,16 +28,9 @@ hr {
   display: inline-block;
   font-family: monospace;
 }
-.snake-body-part,
-.snake-head,.snake-tail{
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    background-color:red;
-    display: inline-block;
-    margin: 1px;
-}
+
 .snake-head{
   z-index: 143;
+  border-radius: 0 34% 34% 0;
   background-color: blue;
 }
